Implemented Asynchronous programming